# Improved_detection_of_fraud_cases_for_e-commerce_and_bank_transactions

fraud-detection/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
fraud-detection/configs/: data.yaml
fraud-detection/notebooks/: eda-creditcard.ipynb  eda-fraud-data.ipynb  feature-engineering.ipynb
fraud-detection/src/: app.py  explainability.py  feature_engineering.py  preprocess_fraud.py  train_models.py
fraud-detection/src/utils/: config_loader.py  exceptions.py  logger.py
fraud-detection/tests/: test_api_connection.py  test_utility.py
